[gd_scene load_steps=9 format=2]

[ext_resource path="res://main_menu.gd" type="Script" id=1]
[ext_resource path="res://txtPlayerName.gd" type="Script" id=2]
[ext_resource path="res://btColor.gd" type="Script" id=3]
[ext_resource path="res://Components/mech.png" type="Texture" id=4]
[ext_resource path="res://Sprite.gd" type="Script" id=5]
[ext_resource path="res://Components/amech.png" type="Texture" id=6]
[ext_resource path="res://Components/mmech.png" type="Texture" id=7]
[ext_resource path="res://backdrop.png" type="Texture" id=8]

[node name="Node2D" type="Node2D"]

[node name="main_menu" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="PanelHost" type="Panel" parent="main_menu"]
margin_left = 445.0
margin_top = 555.0
margin_right = 830.0
margin_bottom = 980.0

[node name="txtServerName" type="LineEdit" parent="main_menu/PanelHost"]
margin_left = 27.8796
margin_top = 72.0188
margin_right = 114.88
margin_bottom = 96.0188
text = "Pouch Sea"

[node name="txtServerPort" type="LineEdit" parent="main_menu/PanelHost"]
margin_left = 306.287
margin_top = 46.5204
margin_right = 364.287
margin_bottom = 70.5204
text = "4546"

[node name="Label" type="Label" parent="main_menu/PanelHost"]
margin_left = 255.182
margin_top = 49.9945
margin_right = 295.182
margin_bottom = 63.9945
text = "Port"

[node name="Label2" type="Label" parent="main_menu/PanelHost"]
margin_left = 23.9373
margin_top = 49.1794
margin_right = 105.937
margin_bottom = 63.1794
text = "Server Name"

[node name="Label3" type="Label" parent="main_menu/PanelHost"]
margin_left = 217.339
margin_top = 21.9219
margin_right = 293.339
margin_bottom = 35.9219
text = "Max Players"

[node name="Label4" type="Label" parent="main_menu/PanelHost"]
margin_left = 26.5333
margin_top = 23.568
margin_right = 100.533
margin_bottom = 37.568
text = "Host Server"

[node name="btCreate" type="Button" parent="main_menu/PanelHost"]
margin_left = 20.0676
margin_top = 309.907
margin_right = 214.068
margin_bottom = 397.907
text = "Create"

[node name="txtMaxPlayers" type="SpinBox" parent="main_menu/PanelHost"]
margin_left = 305.831
margin_top = 14.0601
margin_right = 379.831
margin_bottom = 38.0601
min_value = 2.0
max_value = 16.0
value = 16.0

[node name="rings" type="LineEdit" parent="main_menu/PanelHost"]
margin_left = 308.65
margin_top = 80.1917
margin_right = 366.65
margin_bottom = 104.192
text = "4"

[node name="Label5" type="Label" parent="main_menu/PanelHost"]
margin_left = 251.655
margin_top = 83.4896
margin_right = 291.655
margin_bottom = 97.4896
text = "Rings"

[node name="Label6" type="Label" parent="main_menu/PanelHost"]
margin_left = 246.933
margin_top = 119.66
margin_right = 293.933
margin_bottom = 133.66
text = "Planets"

[node name="Label7" type="Label" parent="main_menu/PanelHost"]
margin_left = 248.754
margin_top = 156.656
margin_right = 291.754
margin_bottom = 170.656
text = "Moons"

[node name="planets" type="LineEdit" parent="main_menu/PanelHost"]
margin_left = 311.835
margin_top = 115.491
margin_right = 369.835
margin_bottom = 139.491
text = "8"

[node name="moons" type="LineEdit" parent="main_menu/PanelHost"]
margin_left = 312.63
margin_top = 153.636
margin_right = 370.63
margin_bottom = 177.636
text = "10"

[node name="Label8" type="Label" parent="main_menu/PanelHost"]
margin_left = 240.482
margin_top = 190.821
margin_right = 293.482
margin_bottom = 204.821
text = "Factions"

[node name="txtfactions" type="LineEdit" parent="main_menu/PanelHost"]
margin_left = 314.333
margin_top = 188.806
margin_right = 372.333
margin_bottom = 212.806
text = "2"

[node name="resources" type="LineEdit" parent="main_menu/PanelHost"]
margin_left = 316.456
margin_top = 228.264
margin_right = 374.456
margin_bottom = 252.264
text = "120"

[node name="Resources" type="Label" parent="main_menu/PanelHost"]
margin_left = 235.535
margin_top = 231.709
margin_right = 301.535
margin_bottom = 257.709
text = "Resources"

[node name="PanelJoin" type="Panel" parent="main_menu"]
margin_left = 30.0
margin_top = 555.0
margin_right = 415.0
margin_bottom = 980.0

[node name="Label" type="Label" parent="main_menu/PanelJoin"]
margin_left = 55.9142
margin_top = 79.0913
margin_right = 95.9142
margin_bottom = 93.0913
text = "Port"

[node name="Label2" type="Label" parent="main_menu/PanelJoin"]
margin_left = 66.5568
margin_top = 134.625
margin_right = 106.557
margin_bottom = 148.625
text = "IP:"

[node name="Label3" type="Label" parent="main_menu/PanelJoin"]
margin_left = 22.2135
margin_top = 17.4534
margin_right = 87.2135
margin_bottom = 31.4534
text = "Join Game"

[node name="btJoin" type="Button" parent="main_menu/PanelJoin"]
margin_left = 165.328
margin_top = 310.554
margin_right = 359.328
margin_bottom = 398.554
text = "Join"

[node name="txtJoinIP" type="LineEdit" parent="main_menu/PanelJoin"]
margin_left = 111.075
margin_top = 137.112
margin_right = 247.075
margin_bottom = 161.112
text = "127.0.0.1"

[node name="txtJoinPort" type="LineEdit" parent="main_menu/PanelJoin"]
margin_left = 110.328
margin_top = 76.0109
margin_right = 285.328
margin_bottom = 108.011
text = "4546"

[node name="PanelPlayer" type="Panel" parent="main_menu"]
margin_left = 30.0
margin_top = 30.0
margin_right = 830.0
margin_bottom = 525.0

[node name="Label" type="Label" parent="main_menu/PanelPlayer"]
margin_left = 26.4133
margin_top = 27.2529
margin_right = 209.413
margin_bottom = 49.2529
text = "Player Name:"

[node name="txtPlayerName" type="LineEdit" parent="main_menu/PanelPlayer"]
margin_left = 38.7228
margin_top = 63.1941
margin_right = 212.723
margin_bottom = 87.1941
text = "Pouch"
script = ExtResource( 2 )

[node name="Label2" type="Label" parent="main_menu/PanelPlayer"]
margin_left = 35.3413
margin_top = 323.015
margin_right = 75.3413
margin_bottom = 337.015
text = "Color"

[node name="btColor" type="ColorPickerButton" parent="main_menu/PanelPlayer"]
margin_left = 28.2483
margin_top = 348.902
margin_right = 173.248
margin_bottom = 467.902
color = Color( 0.266667, 0.478431, 0.254902, 1 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="main_menu/PanelPlayer"]
position = Vector2( 434.447, 405.431 )
rotation = -1.5708
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="main_menu/PanelPlayer"]
position = Vector2( 558.254, 386.122 )
rotation = -1.5708
texture = ExtResource( 6 )
script = ExtResource( 5 )

[node name="Sprite3" type="Sprite" parent="main_menu/PanelPlayer"]
position = Vector2( 704.381, 390.429 )
rotation = -1.5708
texture = ExtResource( 7 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="main_menu"]
position = Vector2( 1376.88, 536.21 )
scale = Vector2( 0.95, 0.95 )
texture = ExtResource( 8 )
[connection signal="pressed" from="main_menu/PanelHost/btCreate" to="main_menu" method="_on_btCreate_pressed"]
[connection signal="pressed" from="main_menu/PanelJoin/btJoin" to="main_menu" method="_on_btJoin_pressed"]
[connection signal="color_changed" from="main_menu/PanelPlayer/btColor" to="main_menu/PanelPlayer/Sprite3" method="_on_btColor_color_changed"]
[connection signal="color_changed" from="main_menu/PanelPlayer/btColor" to="main_menu/PanelPlayer/Sprite2" method="_on_btColor_color_changed"]
[connection signal="color_changed" from="main_menu/PanelPlayer/btColor" to="main_menu/PanelPlayer/Sprite" method="_on_btColor_color_changed"]
